--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   uuid: ^2.0.4
   path_provider: ^1.2.0
-  sqflite: ^1.2.0
+  path: ^1.6.4
+  sqflite: ^1.3.0
   flutter:
     sdk: flutter
 
